frontend/test/should_fail/cast_int_enum_exec.grg
using cast_model;

rule r {
	modify {
	---
		def var enu:ENU;
		exec ({
			enu = (ENU)0
		});
	}
}
